--- a/about.html
+++ b/about.html
@@ -7,19 +7,30 @@
 </head>
 <body>
   <header>
-    <h1>Sobre Nosotros</h1>
+    <h1>📖 Sobre Nosotros</h1>
   </header>
   <nav>
-    <a href="index.html">Inicio</a>
-    <a href="about.html">Acerca de</a>
-    <a href="contact.html">Contacto</a>
+    <a href="index.html">🏠 Inicio</a>
+    <a href="about.html">📖 Acerca de</a>
+    <a href="contact.html">📬 Contacto</a>
   </nav>
   <main>
-    <p>Esta es la sección donde describimos nuestra misión y visión.</p>
+    <p><strong>TKD Legacy</strong> nació como una idea entre clases, bocetos y líneas de código. Fundada por Jorge Andrei, la marca representa una fusión entre el diseño urbano japonés y el desarrollo digital hecho con pasión. 🎨</p>
+
+    <h2>🎯 Misión</h2>
+    <p>Crear una comunidad visual y educativa basada en valores como autenticidad, disciplina y creatividad, expresados tanto en el arte como en el código.</p>
+
+    <h2>🔭 Visión</h2>
+    <p>Ser una plataforma de impacto que conecte moda, educación y tecnología en Colombia y el mundo. 🇨🇴🌏</p>
+
+    <h2>👨‍💻 Fundador</h2>
+    <p>Jorge Andrei es estudiante de Ingeniería de Software, analista en Terpel, y apasionado por el japonés, el diseño y la programación con Python y JavaScript.</p>
   </main>
   <footer>
-    <p>© 2025 Mi Sitio Web</p>
+    <p>© 2025 TKD Legacy | Desarrollado por Jorge Andrei 🚀</p>
   </footer>
 </body>
 </html>
+
+
 
