--- a/contact.html
+++ b/contact.html
@@ -7,24 +7,33 @@
 </head>
 <body>
   <header>
-    <h1>Contacto</h1>
+    <h1>📬 Contáctanos</h1>
   </header>
   <nav>
-    <a href="index.html">Inicio</a>
-    <a href="about.html">Acerca de</a>
-    <a href="contact.html">Contacto</a>
+    <a href="index.html">🏠 Inicio</a>
+    <a href="about.html">📖 Acerca de</a>
+    <a href="contact.html">📬 Contacto</a>
   </nav>
   <main>
-    <p>En esta página puedes encontrar formas de contactarnos.</p>
+    <p>¿Tienes preguntas, ideas, o quieres colaborar con nosotros? ¡Estaremos felices de leerte! 💌</p>
+
     <ul>
-      <li>Email</li>
-      <li>Teléfono</li>
-      <li>Formulario</li>
+      <li>📧 Email: contacto@tkdlegacy.com</li>
+      <li>📞 Teléfono: +57 300 123 4567</li>
+      <li>📱 Instagram: @tkdlegacy.tees</li>
     </ul>
+
+    <h2>📝 Formulario de contacto</h2>
+    <p>Muy pronto podrás enviarnos mensajes directamente desde aquí. Estamos trabajando en ello.</p>
+
+    <h2>🤝 Colaboraciones</h2>
+    <p>Si eres diseñador, programador, o simplemente amas la cultura japonesa, ¡escríbenos! Siempre buscamos mentes creativas. 🇯🇵</p>
   </main>
   <footer>
-    <p>© 2025 Mi Sitio Web</p>
+    <p>© 2025 TKD Legacy | Desarrollado por Jorge Andrei 💼</p>
   </footer>
 </body>
 </html>
+
+
 
