--- a/index.html
+++ b/index.html
@@ -7,19 +7,32 @@
 </head>
 <body>
   <header>
-    <h1>Página de Inicio</h1>
+    <h1>👕 Bienvenido a TKD Legacy</h1>
   </header>
   <nav>
-    <a href="index.html">Inicio</a>
-    <a href="about.html">Acerca de</a>
-    <a href="contact.html">Contacto</a>
+    <a href="index.html">🏠 Inicio</a>
+    <a href="about.html">📖 Acerca de</a>
+    <a href="contact.html">📬 Contacto</a>
   </nav>
   <main>
-    <p>Bienvenido a la página principal. Aquí se muestra información general.</p>
+    <p>En <strong>TKD Legacy</strong> combinamos el estilo urbano japonés con el diseño independiente. Somos más que una marca de camisetas: somos una comunidad creativa que quiere dejar huella. 🌎</p>
+
+    <p>También compartimos recursos útiles sobre programación, diseño y emprendimiento para quienes, como tú, están empezando su camino en el desarrollo y la creatividad digital. 💻</p>
+
+    <h2>🌟 Nuestros pilares</h2>
+    <ul>
+      <li>🧢 Moda urbana japonesa</li>
+      <li>🧵 Calidad y autenticidad</li>
+      <li>👨‍💻 Desarrollo web & aprendizaje</li>
+    </ul>
+
+    <p>Explora más sobre nosotros y únete a esta visión creativa. ¡Estás en casa! 🏡</p>
   </main>
   <footer>
-    <p>© 2025 Mi Sitio Web</p>
+    <p>© 2025 TKD Legacy | Desarrollado por Jorge Andrei ✨</p>
   </footer>
 </body>
 </html>
+
+
 
